Ajustes no desafio Cubos, Alterações solicitadas pelo Doug
