# contracts/RuleContract.ts
@@ -1,7 +1,6 @@
 export interface RuleContract {
   id: string
-  dateStart: string
-  dateEnd: string
+  day: string
   daysOfWeek: Array<number>
   intervals: Array<{ start: string, end: string}>
 }
